# advent-of-code

./: README.md  pyproject.toml
advent_of_code/2022/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb
advent_of_code/2023/: Day 01.ipynb  Day 02.ipynb  Day 03.ipynb  Day 04.ipynb  Day 05.ipynb  Day 06.ipynb  Day 07.ipynb  Day 08.ipynb  Day 09.ipynb
advent_of_code/2024/: 24 - Day 01.ipynb  24 - Day 02.ipynb  24 - Day 03.ipynb  24 - Day 04.ipynb  24 - Day 05.ipynb  24 - Day 06.ipynb  24 - Day 07.ipynb  24 - Day 08.ipynb  24 - Day 09.ipynb  24.03.html
